# little-nova

./: .gitignore  Cargo.toml  LICENSE  README.md
shell-script/: multiple-post-comment.sh  post-comment.sh
src/: main.rs
templates/: base.html  comment-backup.html  comment-entries-backup.html  comment-entries.html  comment.html  create-comment-base.html  create-comment.js
